service.yml
apiVersion: v1

kind: Service
metadata:
 
  name: reddit-clone-service
spec:
  selector:

    app: reddit-clone
  ports:
    # Port Map
  - port: 3000
    targetPort: 3000
    protocol: TCP
  type: LoadBalancer
